--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         </div>
         <div class="rigthside">
             <h1>Crie uma conta</h1>
-            <form method="post" action="">
+            <form method="post" action="cadastro.php" class="validator">
                 <label for="">
                     Seu nome: <br>
-                    <input type="text" name="name">
+                    <input type="text" name="name" data-rules="required|min=2">
                 </label>
                 <label for="">
                     Seu e-mail: <br>
