--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                 </label>
                 <label for="">
                     Seu e-mail: <br>
-                    <input type="email" name="email" id="">
+                    <input type="email" name="email" id="" data-rules="required|email">
                 </label>
                 <label for="">
                     Sua Senha: <br>
-                    <input type="password" name="password" id="password">
+                    <input type="password" name="password" id="password" data-rules="required|min=4">
                 </label>
                 <label for="">
                     <input type="submit" value="Cadastrar">
